# youtube-video-download

./: .gitignore  README.md  main.py  pyproject.toml  test.py
app/backend/: main.py
app/frontend/: main.py
app/frontend/components/: alert.py  loading.py  search.py
app/frontend/tests/components/: test_loading.py
docs/: prototype.tldr
dump/: counter.py  main.py
